--- a/app/views/admins/registrations/new.html.erb
+++ b/app/views/admins/registrations/new.html.erb
@@ -1,29 +1,34 @@
-<h2>Sign up</h2>
+<div class="top-box">
+<div class="top-box-content">
+<div class="devise-box">
+<div class="top-logo"></div>
+<div class="devise-title vixiv-black">新規登録</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "name", :placeholder => "  管理者名", class: "input-mysize" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", :placeholder => "  メールアドレス", class: "input-mysize" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", :placeholder => "  パスワード", class: "input-mysize" %>
+  </div>
+
+  <div class="field">
+    <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "  パスワード(再入力)", class: "input-mysize" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "登録", class: "btn btn-info btn-block devise-button" %>
   </div>
 <% end %>
 
 <%= render "admins/shared/links" %>
+</div>
+</div>
+</div>
