--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,8 @@
-<div class="container-fluid">
-<div class="row">
-	<div class="vixiv-background">
+
+<%= render 'shared/header' %>
+
+<div class="container-fluid all-height vixiv-background">
+	<div class="row footer-position">
 		<div class="contact-box">
 			<div class="contact-title vixiv-black">お問い合わせ</div>
 			<div class="contact-box-content">
@@ -30,8 +32,8 @@
 					</div>
 				<% end %>
 			</div>
-			</div>
 		</div>
 	</div>
 </div>
-</div>
+
+<%= render 'shared/footer' %>
