--- a/app/views/posts/top.html.erb
+++ b/app/views/posts/top.html.erb
@@ -1,3 +1,4 @@
+<div class="top-background">
 <div class="top-box">
 	<div class="top-box-content">
 		<div class="top-logo"></div>
@@ -9,4 +10,5 @@
 			<%= link_to "お問い合わせ", new_contact_path, class: "btn btn-link top-link" %>
 		</div>
 	</div>
+</div>
 </div>
