--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,21 +1,5 @@
-<%= render 'shared/header' %>
-
-<div class="container-fluid all-height vixiv-background2">
-	<div class="row footer-position2">
-		<div class="">
-			<div class="post-box">
-				<div class="post-box-content">
-
-					<%= render partial: "posts/shared/form", post: @post %>
-
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
 <footer>
-<div class="vixiv-background2 footer-position">
+<div class="vixiv-background footer-position">
 	<div class="footer-box">
 		<div class="footer-content">
 			<div class="footer-left">
