--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,7 +1,8 @@
-<div class="top-box">
+<div class="top-background">
+<div class="top-box2">
 <div class="top-box-content">
 <div class="devise-box">
-<div class="top-logo"></div>
+<div class="top-logo2"></div>
 <div class="devise-title vixiv-black">新規登録</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -29,6 +30,7 @@
 <% end %>
 
 <%= render "users/shared/links" %>
+</div>
 </div>
 </div>
 </div>
