--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -4,7 +4,6 @@
 <div class="container-fluid all-height vixiv-background">
 	<div class="row footer-position">
 			<div class="home-box">
-				<!-- < %= link_to " ログアウト", destroy_vtuber_session_path, method: :delete, class: "glyphicon glyphicon-log-out header-top-a link-type-basic" %> -->
 				<div class="home-leftbar">
 					<div class="home-myicon-box">
 						<%= link_to(user_path(@user), class: "") do %>
@@ -27,13 +26,68 @@
 						<div class="home-follow-count"><%= @user.followers.count %></div>
 					</div>
 					<% end %>
+					<div class="home-leftbar-underline"></div>
+					<div class="home-leftbar-title">最近の自分の投稿</div>
+					<% @postm.each do |postm| %>
+						<%= link_to (post_path(postm)) do %>
+							<%= attachment_image_tag postm, :image, size: '75x75', class: "home-leftbar-posts", fallback: "no_image.jpg" %>
+						<% end %>
+					<% end %>
 				</div>
 				<div class="home-centerbar">
 					<div class="home-centerbar-title">おすすめ作品</div>
+						<div class="home-new-posts-box">
+							<% @postz.each do |postz| %>
+								<div class="home-new-post-content">
+									<%= link_to (post_path(postz)) do %>
+										<%= attachment_image_tag postz, :image, size: '150x150', class: "home-new-post-image", fallback: "no_image.jpg" %>
+									<% end %>
+									<div class="home-new-post-title">
+										<%= link_to (post_path(postz)) do %>
+											<b class="home-new-post-title-link"><%= postz.post_title.truncate(10) %></b>
+										<% end %>
+									</div>
+									<%= link_to (user_path(postz.user)) do %>
+										<div class="home-new-post-link">
+											<%= postz.user.name %>
+										</div>
+									<% end %>
+								</div>
+							<% end %>
+						</div>
 					<div class="home-centerbar-title">新着作品</div>
+						<div class="home-new-posts-box">
+							<% @posts.each do |post| %>
+								<div class="home-new-post-content">
+									<%= link_to (post_path(post)) do %>
+										<%= attachment_image_tag post, :image, size: '150x150', class: "home-new-post-image", fallback: "no_image.jpg" %>
+									<% end %>
+									<div class="home-new-post-title">
+										<%= link_to (post_path(post)) do %>
+											<b class="home-new-post-title-link"><%= post.post_title.truncate(10) %></b>
+										<% end %>
+									</div>
+									<%= link_to (user_path(post.user)) do %>
+										<div class="home-new-post-link">
+											<%= post.user.name %>
+										</div>
+									<% end %>
+								</div>
+							<% end %>
+						</div>
 				</div>
 				<div class="home-rightbar">
-					<div class="home-rightbar-title">ランキング</div>
+					<div class="home-rightbar-title">おすすめユーザー</div>
+					<div class="home-rightbar-content">
+						<% @users.each do |user| %>
+							<%= link_to(user_path(user), class: "") do %>
+								<div class="home-rightbar-icon-box">
+									<%= attachment_image_tag user, :profile_image, :fill, 50,50, class: "home-rightbar-icon", fallback: "no_image.jpg" %>
+									<b class="home-rightbar-name"><%= user.name %></b>
+								</div>
+							<% end %>
+						<% end %>
+					</div>
 				</div>
 			</div>
 	</div>
