--- a/app/views/posts/shared/_eform.html.erb
+++ b/app/views/posts/shared/_eform.html.erb
@@ -47,7 +47,7 @@
 </div>
 
 <div class="actions post-button-area">
-	<%= f.submit "投稿", class: "btn btn-primary post-button" %>
+	<%= f.submit "保存", class: "btn btn-primary post-button" %>
 </div>
 
 <% end %>
