--- a/app/views/users/follow/_unfollow.html.erb
+++ b/app/views/users/follow/_unfollow.html.erb
@@ -1,4 +1,3 @@
-<%= form_for(current_user.active_relationships.find_by(following_id: @user.id),
-             html: { method: :delete }) do |f| %>
-  <%= f.submit "Unfollow", class: "btn btn-info btn-block" %>
+<%= form_for(current_user.active_relationships.find_by(following_id: @user.id), html: { method: :delete }) do |f| %>
+  <%= f.submit "フォロー中", class: "btn btn-info btn-block unfollow-button" %>
 <% end %>
