--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -6,10 +6,10 @@
 <div class="devise-title vixiv-black">新規登録</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <!-- < %= devise_error_messages! %> -->
 
   <div class="field">
-    <%= f.text_field :name, autofocus: true, autocomplete: "name", :placeholder => "ニックネーム", class: "input-mysize" %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "name", :placeholder => "ニックネーム(最大7文字)", class: "input-mysize" %>
   </div>
 
   <div class="field">
