--- a/app/views/vtubers/registrations/new.html.erb
+++ b/app/views/vtubers/registrations/new.html.erb
@@ -1,26 +1,27 @@
-<div class="top-box">
+<div class="top-background">
+<div class="top-box2">
 <div class="top-box-content">
 <div class="devise-box">
-<div class="top-logo"></div>
+<div class="top-logo2"></div>
 <div class="devise-title vixiv-black">新規登録</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <!-- < %= devise_error_messages! %> -->
 
   <div class="field">
-    <%= f.text_field :name, autofocus: true, autocomplete: "name", :placeholder => "  活動名", class: "input-mysize" %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "name", :placeholder => "活動名", class: "input-mysize" %>
   </div>
 
   <div class="field">
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", :placeholder => "  メールアドレス", class: "input-mysize" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", :placeholder => "メールアドレス", class: "input-mysize" %>
   </div>
 
   <div class="field">
-    <%= f.password_field :password, autocomplete: "off", :placeholder => "  パスワード", class: "input-mysize" %>
+    <%= f.password_field :password, autocomplete: "off", :placeholder => "パスワード", class: "input-mysize" %>
   </div>
 
   <div class="field">
-    <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "  パスワード(再入力)", class: "input-mysize" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "パスワード(再入力)", class: "input-mysize" %>
   </div>
 
   <div class="actions">
@@ -29,6 +30,7 @@
 <% end %>
 
 <%= render "vtubers/shared/links" %>
+</div>
 </div>
 </div>
 </div>
